# osv-dev-api-client

./: README.md  common.yaml  go.yaml  pyproject.toml  update-spec.py
.github/workflows/: build.yaml  release.yaml
spec/: openapi.yaml
